[#9355] Bump mockito from 2.82.2 to 4.8.1